--- a/public/sass/blocks/_travel.scss
+++ b/public/sass/blocks/_travel.scss
@@ -23,14 +23,14 @@
   justify-content: center;
 }
 
-.ula-container{
+.ula-container {
   position: relative;
-
-  &::after{
+  z-index: 1;
+  &::after {
     position: absolute;
     bottom: 0px;
     left: 0;
-    content: '';
+    content: "";
     background-image: url("../../assets/icons/travel.svg");
     background-repeat: no-repeat;
     background-size: contain;
@@ -39,7 +39,7 @@
   }
 }
 
-.ula-container::before{
+.ula-container::before {
   position: absolute;
   top: 0;
   left: 0;
@@ -51,8 +51,9 @@
   background-position: center;
   width: 400px;
   height: 300px;
-  content: '';
+  content: "";
   opacity: 0.7;
+  z-index: 1;
 }
 
 .left-arabic {
@@ -174,9 +175,22 @@
   }
 }
 
+@include breakpoint-down(1140px) {
+  .ula-container::after,
+  .ula-container::before {
+    display: none !important;
+  }
+}
+
 @include breakpoint-down(820px) {
   .card-image {
     height: 400px;
+  }
+
+  .ula-container::before {
+    display: block !important;
+    height: 200px;
+    width: 100%;
   }
 }
 
